Refactor configuration paths and variable naming:
- Standardize path variables across Docker Compose files and Ansible templates (`DB_PATH`, `DATA_PATH`, etc.) for improved consistency.
- Replace hardcoded directory bindings with centralized variables (`{{ BASE_PATH }}`).
- Align Traefik configuration templates with updated variable structure.
- Add `{{ proxy_network_name }}` to applicable Docker Compose labels.
- Simplify LetsEncrypt configurations via conditional templates and cleaner syntax.

--- a/ansible/group_vars/common.yml
+++ b/ansible/group_vars/common.yml
@@ -38,7 +38,9 @@ storage:
 
   # Stockage de masse (NFS)
   media:
-    jellyfin_media: "{{ drive_nfs_root }}/media"
+    jellyfin_movies: "{{ drive_nfs_root }}/media/movies"
+    jellyfin_shows: "{{ drive_nfs_root }}/media/shows"
+    jellyfin_root: "{{ drive_nfs_root }}/media"
     immich_photos: "{{ drive_nfs_root }}/photos/immich"
     nextcloud_data: "{{ drive_nfs_root }}/cloud/data"
     backups: "{{ drive_nfs_root }}/backups"
