--- a/ansible/roles/docker/defaults/main.yml
+++ b/ansible/roles/docker/defaults/main.yml
@@ -11,6 +11,10 @@ docker_daemon_log_max_file: "5"
 proxy_network_name: "traefik-proxy"
 monitoring_network_name: "monitoring"
 
+# Chemins de base (via storage dans common.yml)
+docker_compose_path: "{{ storage.ansible.compose }}"
+docker_config_path: "{{ storage.ansible.configs }}"
+
 # GPU (conditionnel depuis group_vars)
 system_enable_gpu: false
 
