--- a/ansible/roles/proxy/defaults/main.yml
+++ b/ansible/roles/proxy/defaults/main.yml
@@ -22,6 +22,6 @@ traefik_auth: "admin:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/"
 traefik_network_name: "{{ proxy_network_name }}"
 
 # Chemins
-traefik_config_path: "{{ storage.ansible.compose }}/traefik/config"
+traefik_config_path: "{{ docker_config_path }}/traefik"
 traefik_data_path: "{{ storage.ansible.compose }}/traefik/letsencrypt"
 traefik_logs_path: "{{ storage.ansible.compose }}/traefik/logs"
