Standardize user and group variables:
- Rename `system_user` and `system_group` to `common_system_user` and `common_system_group` across Ansible roles, templates, and `.env` files.
- Update directory ownerships and permissions to use the renamed variables.
- Adjust Docker Compose configurations and Prometheus scrape targets to align with new naming convention.
- Update `DOC_TECHNIQUE.md` to reflect the changes.

--- a/ansible/group_vars/common.yml
+++ b/ansible/group_vars/common.yml
@@ -48,5 +48,5 @@ storage:
 # ====================================================
 # 3. PERMISSIONS (PUID/PGID)
 # ====================================================
-system_user: 1000
-system_group: 1000
+common_system_user: 1000
+common_system_group: 1000
