Remove Immich, Jellyfin, and Nextcloud services and related configurations:
- Delete Docker Compose files for Immich, Jellyfin, and Nextcloud.
- Remove PostgreSQL initialization scripts and associated Grafana dashboards.
- Clean up related network configurations and monitoring resources.

--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -32,7 +32,7 @@
 
 - name: Copier le docker-compose pour Redis
   ansible.builtin.template:
-    src: ../../../docker/stateful/redis/docker-compose.yml
+    src: docker-compose.yml.j2
     dest: "{{ storage.ansible.compose }}/redis/docker-compose.yml"
     mode: '0644'
     trim_blocks: true
