--- a/ansible/roles/jellyfin/tasks/main.yml
+++ b/ansible/roles/jellyfin/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Générer le fichier docker-compose
   ansible.builtin.template:
-    src: ../../../docker/app/jellyfin/docker-compose.yml
+    src: docker-compose.yml.j2
     dest: "{{ storage.ansible.compose }}/jellyfin/docker-compose.yml"
     mode: '0644'
     trim_blocks: true
